res/examples/valid/block_mixed_returns_expr.eg
{
    123;
    "foo";
    {};
    ();
    let a = 1357;
    const b = 4567;
    const c = "foo";
    const d = "bar";
    (1,2,3,);
    [a, b];
    0..10;
    if (10 > 1) { c } else { d }
};
