res/examples/invalid/call_fn_expr_with_too_few_args.eg
let sum = (a: number, b: number): number => { a + b };

sum(10);

// out: TypeError: expects 2 arguments but received 1